--- a/style.css
+++ b/style.css
@@ -212,5 +212,5 @@ h1 + h2 {
 
 
 .bottom-spacer {
-	margin-bottom: 100px;
+	margin-bottom: 75px;
 }
